Add vscode engine

--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "murky-water",
   "version": "1.0.0",
+  "engines": {
+    "vscode": "^1.11.0"
+  },
   "description": "Murky Water Code Snippets",
   "contributes": {
     "snippets": [
